test: 补充单元测试